info provider desde el back

--- a/src/app/components/create-content-provider/create-content-provider.component.html
+++ b/src/app/components/create-content-provider/create-content-provider.component.html
@@ -453,8 +453,7 @@
 
             <!-- Botones -->
             <div class="navigation">
-                <button type="submit" [disabled]="!isFormValid()" (click)="isFormValid() && onDisabledButtonClick()"
-                    class="submit-button">
+                <button type="submit" class="submit-button">
                     Guardar Contenido
                 </button>
 
