--- a/src/app/pages/provider-screen/provider-screen.component.html
+++ b/src/app/pages/provider-screen/provider-screen.component.html
@@ -76,7 +76,7 @@
                 <div class="menu-item">Feedback</div>
 
             </div>
-            <button type="submit" class="create-content-button" (click)="openPopup()">
+            <button type="button" class="create-content-button" (click)="openPopup()">
                 Crear contenido
             </button>
             <app-create-content-provider [isVisible]="isPopupVisible" (close)="closePopup()">
