--- a/src/app/components/weather/weather.component.css
+++ b/src/app/components/weather/weather.component.css
@@ -11,7 +11,7 @@ body{
 
 main{
     margin-top: 1.5rem;
-    width: 100%;
+    width: 90%;
     height: max-content;
     
     min-height: 300px;
@@ -24,7 +24,7 @@ main{
     box-sizing: border-box;
     
 }
-main form{
+/* main form{
     border: 1px solid #5552;
     display: flex;
     border-radius: 30px;
@@ -40,7 +40,7 @@ main form button{
 }
 main form i{
     opacity: 0.7;
-}
+} */
 main .result{
     padding-top: 20px;
     text-align: center;
