mistake with webpage in providers

--- a/src/app/pages/provider-screen/provider-screen.component.html
+++ b/src/app/pages/provider-screen/provider-screen.component.html
@@ -40,7 +40,7 @@
             </div>
             <div class="data-provider">
                 <span class="fas fa-globe"></span>
-                <label>{{ user.webpage || 'Pagina web' }}</label>
+                <label>{{ user.webPage || 'Pagina web' }}</label>
             </div>
             <div class="data-provider">
                 <span class="fa-solid fa-square-pen"></span>
