--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -69,7 +69,7 @@
         {{ content.service.description || 'Descripción no disponible.' }}
       </div>
     </div>
-    <app-add-to-cart *ngIf="content.service" [serviceId]="content.service.serviceId"></app-add-to-cart>
+    <app-add-to-cart *ngIf="content.service && role !== 'PROVIDER'" [serviceId]="content.service.serviceId"></app-add-to-cart>
     <button (click)="goToInfoService()" class="verMas" style="margin-top: 1rem;" *ngIf="content.service">Ver más información</button>
   </div>
 </section>
