--- a/src/app/pages/info-service/info-service.component.html
+++ b/src/app/pages/info-service/info-service.component.html
@@ -14,11 +14,7 @@
     </div>
     <div class="imagescontainer">
       <div class="leftimage">
-        <img
-          [src]="photo || 'assets/no-content.jpg'"
-          alt="placeholder"
-          class="imgplace h-96 object-cover"
-        />
+        <img [src]="photo || 'assets/no-content.jpg'" alt="placeholder" class="imgplace h-96 object-cover" />
       </div>
       <div class="rightimage">
         <!-- <app-weather></app-weather> -->
@@ -31,7 +27,7 @@
           <div class="card-header">
             <h2>
               {{ content.service?.country }} - {{ content.service?.capital }} ({{
-                content.service?.city
+              content.service?.city
               }})
             </h2>
             <h3>{{ content.service?.officialName }}</h3>
@@ -64,100 +60,57 @@
               <i class="fa-regular fa-star"></i>
             </button>
             <span
-              class="absolute left-1/2 z-20 flex origin-bottom -translate-x-1/2 -translate-y-[calc(125%)] scale-0 flex-col items-center gap-2 rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm text-black shadow-md transition-all duration-300 ease-in-out group-hover:scale-100"
-            >
+              class="absolute left-1/2 z-20 flex origin-bottom -translate-x-1/2 -translate-y-[calc(125%)] scale-0 flex-col items-center gap-2 rounded-lg border border-gray-300 bg-white px-3 py-2 text-sm text-black shadow-md transition-all duration-300 ease-in-out group-hover:scale-100">
               <div class="rating">
-                <input
-                  type="radio"
-                  id="star-1"
-                  name="star-radio"
-                  value="star-1"
-                  (click)="setChecked(5)"
-                  [checked]="myRating.rating === 5"
-                />
+                <input type="radio" id="star-1" name="star-radio" value="star-1" (click)="setChecked(5)"
+                  [checked]="myRating.rating === 5" />
                 <label for="star-1">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                      pathLength="360"
-                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                    ></path>
+                    <path pathLength="360"
+                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                    </path>
                   </svg>
                 </label>
-                <input
-                  type="radio"
-                  id="star-2"
-                  name="star-radio"
-                  value="star-1"
-                  (click)="setChecked(4)"
-                  [checked]="myRating.rating === 4"
-                />
+                <input type="radio" id="star-2" name="star-radio" value="star-1" (click)="setChecked(4)"
+                  [checked]="myRating.rating === 4" />
                 <label for="star-2">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                      pathLength="360"
-                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                    ></path>
+                    <path pathLength="360"
+                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                    </path>
                   </svg>
                 </label>
-                <input
-                  type="radio"
-                  id="star-3"
-                  name="star-radio"
-                  value="star-1"
-                  (click)="setChecked(3)"
-                  [checked]="myRating.rating === 3"
-                />
+                <input type="radio" id="star-3" name="star-radio" value="star-1" (click)="setChecked(3)"
+                  [checked]="myRating.rating === 3" />
                 <label for="star-3">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                      pathLength="360"
-                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                    ></path>
+                    <path pathLength="360"
+                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                    </path>
                   </svg>
                 </label>
-                <input
-                  type="radio"
-                  id="star-4"
-                  name="star-radio"
-                  value="star-1"
-                  (click)="setChecked(2)"
-                  [checked]="myRating.rating === 2"
-                />
+                <input type="radio" id="star-4" name="star-radio" value="star-1" (click)="setChecked(2)"
+                  [checked]="myRating.rating === 2" />
                 <label for="star-4">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                      pathLength="360"
-                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                    ></path>
+                    <path pathLength="360"
+                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                    </path>
                   </svg>
                 </label>
-                <input
-                  type="radio"
-                  id="star-5"
-                  name="star-radio"
-                  value="star-1"
-                  (click)="setChecked(1)"
-                  [checked]="myRating.rating === 1"
-                />
+                <input type="radio" id="star-5" name="star-radio" value="star-1" (click)="setChecked(1)"
+                  [checked]="myRating.rating === 1" />
                 <label for="star-5">
                   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-                    <path
-                      pathLength="360"
-                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z"
-                    ></path>
+                    <path pathLength="360"
+                      d="M12,17.27L18.18,21L16.54,13.97L22,9.24L14.81,8.62L12,2L9.19,8.62L2,9.24L7.45,13.97L5.82,21L12,17.27Z">
+                    </path>
                   </svg>
                 </label>
               </div>
-              <textarea
-                name=""
-                id="comment"
-                [value]="myRating.comment"
-                class="h-16 w-full resize-none rounded-lg border border-neutral-400 px-2 py-1 outline-none"
-              ></textarea>
-              <button
-                (click)="onChangeComment()"
-                class="rounded-full border border-neutral-400 bg-blue-200 px-2 py-1"
-              >
+              <textarea name="" id="comment" [value]="myRating.comment"
+                class="h-16 w-full resize-none rounded-lg border border-neutral-400 px-2 py-1 outline-none"></textarea>
+              <button (click)="onChangeComment()" class="rounded-full border border-neutral-400 bg-blue-200 px-2 py-1">
                 Guardar
               </button>
             </span>
@@ -209,12 +162,9 @@
                 <li *ngFor="let day of week" class="day-name">
                   {{ day | slice: 0 : 3 }}
                 </li>
-                <li
-                  (click)="clickDay(day)"
-                  [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
+                <li (click)="clickDay(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
                   [ngClass]="{ 'selected-day': selectedDay === day }"
-                  *ngFor="let day of monthSelect; let first = first"
-                >
+                  *ngFor="let day of monthSelect; let first = first">
                   <span>{{ day?.value }}</span>
                 </li>
               </ol>
@@ -238,12 +188,9 @@
                 <li *ngFor="let day of week" class="day-name">
                   {{ day | slice: 0 : 3 }}
                 </li>
-                <li
-                  (click)="clickDayExit(day)"
-                  [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
+                <li (click)="clickDayExit(day)" [style.gridColumnStart]="first ? day?.indexWeek : 'auto'"
                   [ngClass]="{ 'selected-day': selectedDayExit === day }"
-                  *ngFor="let day of monthSelectExit; let first = first"
-                >
+                  *ngFor="let day of monthSelectExit; let first = first">
                   <span>{{ day?.value }}</span>
                 </li>
               </ol>
@@ -284,11 +231,8 @@
 
             <div class="field">
               <textarea formControlName="description" maxlength="300" placeholder=""></textarea>
-          </div>
-            <button
-              class="enviar"
-              (click)="publishQuestion()"
-            >
+            </div>
+            <button class="enviar" (click)="publishQuestion()">
               Enviar
             </button>
           </div>
@@ -298,8 +242,7 @@
   </div>
   <div *ngIf="showRatingsPopup" class="fixed left-0 top-0 z-20 h-screen w-screen bg-black/20">
     <div
-      class="absolute left-1/2 top-1/2 flex h-3/4 w-1/2 -translate-x-1/2 -translate-y-1/2 flex-col gap-4 rounded-2xl bg-white px-8 py-4"
-    >
+      class="absolute left-1/2 top-1/2 flex h-3/4 w-1/2 -translate-x-1/2 -translate-y-1/2 flex-col gap-4 rounded-2xl bg-white px-8 py-4">
       <div class="flex justify-between">
         <h1>
           Todas las reseñas: {{ averageRatingReceived | number: '1.1-1' }}
